--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,6 +1,6 @@
 {
   "template": "node",
-  "infiniteLoopProtection": true,
-  "hardReloadOnChange": false,
+  "infiniteLoopProtection": false,
+  "hardReloadOnChange": true,
   "view": "browser"
 }
